--- a/src/app/dialogs/position-dialog/position-dialog.component.css
+++ b/src/app/dialogs/position-dialog/position-dialog.component.css
@@ -1,25 +1,25 @@
 .container {
-    display: flex;
-    flex-direction: column;
-    width: 400px;
-    max-width: 100%;
+  display: flex;
+  flex-direction: column;
+  width: 400px;
+  max-width: 100%;
 }
 
 .form {
-    display: flex;
-    margin-bottom: 10px;
+  display: flex;
+  margin-bottom: 10px;
 }
 
 .mat-form-field {
-    font-size: 16px;
-    flex-grow: 1;
+  font-size: 16px;
+  flex-grow: 1;
 }
 
 .item2 {
-    background-color: white;
-    color: #39ace7;
-    margin-bottom: 4%;
-    border: 2px solid #39ace7;
+  background-color: white;
+  color: #39ace7;
+  margin-bottom: 4%;
+  border: 2px solid #39ace7;
 }
 
 .form {
@@ -31,31 +31,31 @@
 }
 
 button:hover {
-    color: #fff;
-    background-color: #39ace7;
-    transition: 0.3s;
+  color: #fff;
+  background-color: #39ace7;
+  transition: 0.3s;
 }
 
 button[disabled]:hover {
-    background-color: #fff;
+  background-color: #fff;
 }
 
 .mat-dialog-content {
-    overflow-y: auto;
-    padding-bottom: 10px;
+  overflow-y: auto;
+  padding-bottom: 10px;
 }
 
-::ng-deep .redNoMatch
-{
-    color: #fff;
-    background-color: #39ace7 !important;
+::ng-deep .redNoMatch {
+  color: #fff;
+  background-color: #39ace7 !important;
 }
 
 button {
-    outline: none;
+  outline: none;
 }
+
 ::ng-deep .mat-button-focus-overlay {
-    display: none;
+  display: none;
 }
 
 .rotate {
@@ -66,17 +66,28 @@ button {
   transform: rotate(270deg);
 }
 
-.horizontal{
+.horizontal {
   height: 200px;
-  width:250px;
+  width: 250px;
 }
 
-.vertical{
+.vertical {
   height: 250px;
-  width:200px;
+  width: 200px;
 }
 
 
 .mat-spinner-color::ng-deep circle {
   stroke: #56baed !important;
+}
+
+.photo-input {
+  display: flex;
+  align-items: center;
+}
+
+.photo-input img {
+  width: 40px;
+  height: 40px;
+  margin-left: 30px;
 }
