--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -54,7 +54,7 @@
         </mat-nav-list>
         <mat-nav-list>
             <a mat-list-item class="nav-list-item" [routerLink]="['uploads']">
-                <mat-icon class="nav-icon">cloud_upload</mat-icon>Upload Files
+                <mat-icon class="nav-icon">cloud_upload</mat-icon>Import / Export
             </a>
         </mat-nav-list>
     </mat-sidenav>
