--- a/src/app/components/uploads/uploads.component.css
+++ b/src/app/components/uploads/uploads.component.css
@@ -1,4 +1,5 @@
 .parentcontainer {
+    background-color:white;
     display: flex;
     margin: 0 auto;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -9,7 +10,7 @@
     height: 200px;
     padding: 2rem;
     text-align: center;
-    border: dashed 1px #979797;
+    border: dashed 1px;
     position: relative;
     margin: 0 auto;
     cursor: pointer;
