--- a/src/app/components/uploads/uploads.component.html
+++ b/src/app/components/uploads/uploads.component.html
@@ -13,9 +13,9 @@
       <br>
       <label for="download-obj-template">Download template</label>
     </div>
-
+<br>
     <div *ngIf="isObjLoading"
-      style="margin-top:15%;display: flex; justify-content: center; align-items: center; background: white;">
+      style="margin-top:15%;display: flex; justify-content: center; align-items: center; background: transparent;">
       <mat-progress-spinner class="mat-spinner-color" mode="indeterminate" [diameter]="30">
       </mat-progress-spinner>
     </div>
@@ -29,14 +29,15 @@
 
     <label for="positionFileDropRef" class="browseButton" *ngIf="isPositionsEmpty">Browse</label>
     <button mat-button color="warn" *ngIf="!isPositionsEmpty" (click)="deletePositions()">Delete positions</button>
-
+    <button mat-button color="primary" *ngIf="!isPositionsEmpty" (click)="exportPositions()">Export positions</button>
     <div class="download-template">
       <em id="download-obj-template" class="fa-solid fa-download fa-2x" (click)="downloadTemplate(2)"></em>
       <br>
       <label for="download-obj-template">Download template</label>
     </div>
+    <br>
     <div *ngIf="isPosLoading"
-      style="margin-top:15%;display: flex; justify-content: center; align-items: center; background: white;">
+      style="margin-top:15%;display: flex; justify-content: center; align-items: center; background: white; background: transparent;">
       <mat-progress-spinner class="mat-spinner-color" mode="indeterminate" [diameter]="30">
       </mat-progress-spinner>
     </div>
@@ -56,9 +57,9 @@
       <br>
       <label for="download-obj-template">Download template</label>
     </div>
-
+<br>
     <div *ngIf="isProdLoading"
-      style="margin-top:15%;display: flex; justify-content: center; align-items: center; background: white;">
+      style="margin-top:15%;display: flex; justify-content: center; align-items: center; background: white; background: transparent;">
       <mat-progress-spinner class="mat-spinner-color" mode="indeterminate" [diameter]="30">
       </mat-progress-spinner>
     </div>
@@ -68,4 +69,4 @@
 
 <p class="error-message" *ngIf="errorMessage">{{errorMessage}}</p>
 
-<p class="warning-message"> Warning: Max allowed 1500 rows per Excel file.</p>
+<p class="warning-message"> Warning: Max allowed 1000 rows per Excel file.</p>
