--- a/src/app/dialogs/position-dialog/position-dialog.component.html
+++ b/src/app/dialogs/position-dialog/position-dialog.component.html
@@ -79,7 +79,7 @@
       </mat-form-field>
     </div>
 
-    <div class="form" *ngIf="flag == 1 || flag == 4">
+    <div class="form" *ngIf="flag == 1 || flag == 4" style="margin-bottom: 20px;">
       <mat-form-field>
         <mat-select [(ngModel)]="positionDto.location" placeholder="Location" name="location">
           <mat-option *ngFor="let location of locations" [value]="location">
@@ -88,7 +88,7 @@
         </mat-select>
       </mat-form-field>
     </div>
-    <div class="form" *ngIf="flag == 2 || flag == 3">
+    <div class="form" *ngIf="flag == 2 || flag == 3" style="margin-bottom: 20px;">
       <mat-form-field>
         <mat-label>Location</mat-label>
         <input matInput [(ngModel)]="positionDto.location" name="location" [disabled]="true" />
@@ -99,7 +99,7 @@
         <input type="file" id="inputFile" (change)="uploadFile($event)" accept="image/*" fromControlName="file" hidden
           capture="camera" />
 
-        <div class="photo-input">
+        <div class="photo-input" >
           <!-- <p style="margin-bottom:5% " *ngIf="flag!=2 && flag !=3">Click to add photo:</p> -->
           <p *ngIf="flag!=2 && flag !=3">Click to add photo:</p>
           <label for="inputFile" class="browseFile" *ngIf="flag!=2 && flag != 3">
@@ -112,14 +112,14 @@
         <p>Photo is uploaded.</p>
       </div>
     </div>
-    <div *ngIf="data.img || flag==4">
+    <div *ngIf="data.img || flag==4" >
       <div class="form pos-img" *ngIf="data.img != 'undefined'">
         <img src="https://storagestorecheck.blob.core.windows.net/storecheck/{{
             data.img
           }}" alt="Position photo" width="200" height="200" id="posphoto" />
       </div>
       <br>
-      <form [formGroup]="form" (ngSubmit)="submitFormUpdate()" *ngIf="!imageUploaded">
+      <form [formGroup]="form" (ngSubmit)="submitFormUpdate()" *ngIf="!imageUploaded" style="margin-top: 10px;">
         <input type="file" id="inputFile" (change)="uploadFile($event)" accept="image/*" fromControlName="file" hidden
           capture="camera" />
         <label *ngIf="data.img && data.img != 'undefined' && flag !=2 && flag != 3" style="margin-bottom:5%">Update
