add positiong malo gore

--- a/src/app/components/position/position.component.html
+++ b/src/app/components/position/position.component.html
@@ -16,7 +16,7 @@
         <button mat-icon-button color="primary" (click)="openDialog(1)">
           <mat-icon>add</mat-icon>
         </button>
-        <div>
+        <div style="margin-top: 3px;">
           Add position
         </div>
       </mat-header-cell>
