Izmenjeno delete dugme za pozicije i type umesto dimensions

--- a/src/app/components/position/position.component.html
+++ b/src/app/components/position/position.component.html
@@ -7,7 +7,7 @@
       <mat-cell *matCellDef="let row">{{ row.posClassName}}</mat-cell>
     </ng-container>
     <ng-container matColumnDef="posTypeName">
-      <mat-header-cell *matHeaderCellDef mat-sort-header class="column-name">Dimensions</mat-header-cell>
+      <mat-header-cell *matHeaderCellDef mat-sort-header class="column-name">Type</mat-header-cell>
       <mat-cell *matCellDef="let row">{{ row.posTypeName}}</mat-cell>
     </ng-container>
 
