--- a/src/app/dialogs/position-dialog/position-dialog.component.css
+++ b/src/app/dialogs/position-dialog/position-dialog.component.css
@@ -7,7 +7,7 @@
 
 .form {
   display: flex;
-  
+
 }
 
 .mat-form-field {
@@ -21,6 +21,14 @@
   margin-bottom: 4%;
   border: 2px solid #39ace7;
 }
+
+.item2red {
+  background-color: red;
+  color: white;
+  margin-bottom: 4%;
+  border: 2px solid red;
+}
+
 
 .form {
   display: flex;
