--- a/src/app/dialogs/position-dialog/position-dialog.component.html
+++ b/src/app/dialogs/position-dialog/position-dialog.component.html
@@ -7,7 +7,7 @@
 
     <div class="form" *ngIf="flag == 1 || flag == 4">
       <mat-form-field>
-        <mat-select [(ngModel)]="positionDto.posTypeName" placeholder="Dimensions" name="posClassType"
+        <mat-select [(ngModel)]="positionDto.posTypeName" placeholder="Type" name="posClassType"
           required="flag == 1">
           <mat-option *ngFor="let type of positionTypes" [value]="type.positionTypeName">
             {{ type.positionTypeName }}
@@ -17,7 +17,7 @@
     </div>
     <div class="form" *ngIf="flag == 2 || flag == 3">
       <mat-form-field>
-        <mat-label>Dimensions</mat-label>
+        <mat-label>Type</mat-label>
         <input matInput [(ngModel)]="positionDto.posTypeName" name="posTypeName" [disabled]="true" required />
       </mat-form-field>
     </div>
@@ -146,7 +146,7 @@
         (click)="submitFormUpdate()">
         Ok
       </button>
-      <button mat-button class="item2" *ngIf="flag == 2" type="submit" (click)="delete()">
+      <button mat-button color="warn" class="item2red" *ngIf="flag == 2" type="submit" (click)="delete()">
         Delete
       </button>
       <button mat-button class="item2" (click)="close()">Cancel</button>
