Bez presecanja start dugmeta

--- a/src/app/components/object/object.component.html
+++ b/src/app/components/object/object.component.html
@@ -43,8 +43,9 @@
         </div>
 
         <div class="menu-btn">
-          <button  mat-stroked-button color="primary" class="item2" (click)="loadData(false)"
-            *ngIf="!isDashboard">Search <mat-icon>search</mat-icon></button>
+          <button mat-stroked-button color="primary" class="item2" (click)="loadData(false)" *ngIf="!isDashboard">Search
+            <mat-icon>search</mat-icon>
+          </button>
         </div>
       </div>
     </div>
