--- a/src/app/components/object/object.component.html
+++ b/src/app/components/object/object.component.html
@@ -77,7 +77,7 @@
               <mat-icon (click)="openDialog(1)" class="whitetext">add</mat-icon>
             </button>
           </mat-header-cell>
-          <mat-cell *matCellDef="let row; let i=index">
+          <mat-cell *matCellDef="let row; let i=index" (click)="$event.stopPropagation()">
             <button color="primary" mat-icon-button color="primary" *ngIf="isAdmin" (click)="openUpdateDialog(4,row)">
               <mat-icon area-label="Info">info</mat-icon>
             </button>
