--- a/src/app/components/uploads/uploads.component.css
+++ b/src/app/components/uploads/uploads.component.css
@@ -30,15 +30,6 @@
     padding: 8px 16px;
 }
 
-.browseButton:hover {
-    color: white;
-    width: 100px;
-    height: 20px;
-    border-radius: 21.5px;
-    padding: 8px 16px;
-    background-color: gray;
-}
-
 .mat-spinner-color::ng-deep circle {
     stroke: #56baed !important;
 }
@@ -68,4 +59,13 @@
    text-align: center;
    font-size:20px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+
+
+.browseButton:hover {
+  background-color: #fff;
+  color: #39ace7;
+  transition: 0.3s;
+  border: 2px solid #39ace7;
 }
