--- a/src/app/dialogs/email-dialog/email-dialog.component.css
+++ b/src/app/dialogs/email-dialog/email-dialog.component.css
@@ -39,3 +39,7 @@ button:hover {
 .mat-spinner-color::ng-deep circle {
   stroke: #56baed !important;
 }
+
+.mat-button {
+  border-radius: 10px !important;
+}
