--- a/src/app/dialogs/planogram-dialog/planogram-dialog.component.html
+++ b/src/app/dialogs/planogram-dialog/planogram-dialog.component.html
@@ -5,7 +5,7 @@
         <ul calss="list">
             <li class="list-item" *ngFor="let planogram of planograms" (click)="loadPlanogram(planogram.planogramPdf)">
                 {{planogram.planogramPdf}}
-            
+
                 <button mat-icon-button color="primary" *ngIf="isAdmin" class="delete-btn">
                     <mat-icon (click)="deletePlanogram(planogram.planogramPdf);$event.stopPropagation()"> delete </mat-icon>
                 </button>
@@ -15,7 +15,12 @@
 
 
             <button mat-button (click)="close()" class="item2">Close</button>
-            
+
+            <div *ngIf="planogramLoading"
+            style="display: flex; justify-content: center; align-items: center; background: white;color:#56baed">
+            <mat-progress-spinner class="mat-spinner-color" mode="indeterminate" [diameter]="20">
+            </mat-progress-spinner>
+          </div>
         </div>
     </form>
 </div>
