--- a/src/app/dialogs/unfinished-object-store-check-dialog/unfinished-object-store-check-dialog.component.css
+++ b/src/app/dialogs/unfinished-object-store-check-dialog/unfinished-object-store-check-dialog.component.css
@@ -1,7 +1,7 @@
 .container {
     display: flex;
     flex-direction: column;
-  
+
 }
 
 .form {
@@ -39,4 +39,8 @@ button {
 }
 ::ng-deep .mat-button-focus-overlay {
     display: none;
+}
+
+.mat-button {
+  border-radius: 10px !important;
 }
