Dodata ikonica na exit dugme u choose object

--- a/src/app/components/choose-object/choose-object.component.html
+++ b/src/app/components/choose-object/choose-object.component.html
@@ -20,7 +20,7 @@
 
 
             <button mat-stroked-button color="primary" class="item2" style="margin-left:10px;"
-                (click)="exit()">Exit</button>
+                (click)="exit()">Exit <mat-icon>exit_to_app</mat-icon></button>
 
         </div>
     </div>
