--- a/src/app/components/store-check/store-check.component.html
+++ b/src/app/components/store-check/store-check.component.html
@@ -29,7 +29,7 @@
     <div style="justify-content: center;margin-right: 30px;">SECONDARY POSITIONS</div>
   </div>
 
-  <div class="disableditem resolve-fb fadeIn second">
+  <div class="disableditem resolve-fb fadeIn second" [routerLink]="['/product']">
     <!-- ENABLE: [routerLink]="['/product']"-->
     <p>
       <img src="../../../assets/icons8-barcode-scanner-64.png" width="50px" height="50px"
@@ -38,7 +38,7 @@
     <div style="justify-content: center;margin-right: 50px;">PRICE SCANNER</div>
   </div>
 
-  <div class="disableditem resolve-fb fadeIn second">
+  <div class="disableditem resolve-fb fadeIn second" [routerLink]="['/returns']">
     <p>
       <img src="../../../assets/icons8-u-turn-to-left-30.png" width="50px" height="50px"
         style="margin-top:15px; float:left; margin-left:20px;">
